agregando jwt y autorizando para  eliminar

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "Database": {
     "ConnectionString": "Data Source=localDb"
+  },
+  "Jwt": {
+    "Key": "clave_secreta_para_firmar_el_token",
+    "Issuer": "emisor_del_token"
   }
 }
